@@ -3,3 +3,4 @@ debian/tmp/usr/lib/libconfig.a
 debian/tmp/usr/lib/libconfig.so
 debian/tmp/usr/lib/libconfig.la
 debian/tmp/usr/lib/pkgconfig/libconfig.pc
+debian/tmp/usr/lib/cmake/libconfig/libconfigConfig.cmake
